# fluidic

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json
lib-tauri/jira-client/: Cargo.toml  README.md
lib-tauri/jira-client/.openapi-generator/: FILES
lib-tauri/jira-client/src/apis/: application_properties_api.rs  applicationrole_api.rs  attachment_api.rs  avatar_api.rs  backlog_api.rs  board_api.rs  cluster_api.rs  comment_api.rs  component_api.rs  configuration.rs  configuration_api.rs  custom_field_option_api.rs  custom_fields_api.rs  dashboard_api.rs  email_templates_api.rs  epic_api.rs  field_api.rs  filter_api.rs  group_api.rs  groups_api.rs  groupuserpicker_api.rs  index_api.rs  index_snapshot_api.rs  issue_api.rs  issue_link_api.rs  issue_link_type_api.rs  issuesecurityschemes_api.rs  issuetype_api.rs  issuetypescheme_api.rs  jql_api.rs  (+37 more)
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: jira.rs  lib.rs  main.rs
src-tauri/src/jira/: client.rs  error.rs  mod.rs
src-tauri/src/jira/api/: mod.rs  sprint.rs
src-tauri/src/stores/: config.rs  issues.rs  mod.rs  signal.rs  sprints.rs
src-tauri/src/sync/: issues.rs  mod.rs  paging.rs  project.rs  sprints.rs
src/components/: app.rs  issue_categories.rs  issue_list.rs  issue_manager.rs  issue_row.rs  issue_side_panel.rs  mod.rs  project_edit_popup.rs  search_input.rs  test_data.rs
src/jira/: client.rs  mod.rs
src/jira/api/: mod.rs  sprint.rs
test/resource/: testconfig.array.json  testconfig.full.json  testconfig.malformed.json  testconfig.malformed_property.json
(+277 files in other folders)
