[package]
name = "fluidic"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fluidic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.15"
dotenv = "0.15.0"
ouroboros = "0.18.5"
thiserror = "2.0.12"
leptos = { version = "0.7" }
jira-openapi-client = { path = "../lib-tauri/jira-client" }
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
